example-files/config/my-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  serviceAccountName: build-robot
  securityContext:
    readOnlyFilesystem: true
    runAsNonRoot: true
