example-files/config/no-containers.yml
apiVersion: v1
kind: Pod
metadata:
  name: random
spec:
  not_containers:
  - name: Random
    image: hello
